Thu Oct 22 18:52:53 2015  Akinori MUSHA  <knu@iDaemons.org>

	* vm_eval.c (rb_f_loop): When a loop is stopped by a StopIteration
	  exception, return what the enumerator has returned instead of
	  nil. [ruby-core:71133] [Feature #11498]

Thu Oct 22 18:25:10 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap (idle): add a new argument timeout for keep-alive.
	  [ruby-core:63693] [Bug #10031]

Thu Oct 22 15:30:08 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_peephole_optimize): peephole optimization for
	  branchnil jumps.

	* compile.c (iseq_compile_each): generate save navigation operator
	  code.

	* insns.def (branchnil): new opcode to pop the tos and branch if
	  it is nil.

	* parse.y (NEW_QCALL, call_op, parser_yylex): parse token '.?'.
	  [Feature #11537]

Thu Oct 22 13:16:19 2015  Guilherme Reis Campos  <guilhermekbsa@gmail.com>

	* dir.c (ruby_brace_expand): glob brace expansion edge case fix.
	  When there are closing braces '}' before a open brace '{' it
	  must be ignored and considered as literal.
	  [ruby-core:71138] [Bug #11609]

Thu Oct 22 13:13:49 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (argf_next_argv): check ARGV element type, and try
	  conversion if necessary.  [ruby-core:71140] [Bug #11610]

Thu Oct 22 11:11:16 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* test/net/ftp/test_ftp.rb: add tests for getbinaryfile and
	  gettextfile.

Wed Oct 21 18:34:06 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_magic_comment): allow a sole magic comment without
	  indicators, neither other non-space comments.  [Feature #8976]

Tue Oct 20 12:17:56 2015  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/prime.rb: Add basic argument checking to Prime.prime?
	    [Bug #11606]

Tue Oct 20 12:17:50 2015  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/prime.rb: Optimize Integer#prime?
	  Patch by Nick Slocum [Bug #10354]

Tue Oct 20 08:12:47 2015  Rei Odaira  <Rei.Odaira@gmail.com>
